show word on gameover

--- a/game.html
+++ b/game.html
@@ -120,6 +120,8 @@
               <div class="no-lives-wrapper">
                 <div class="text-center">
                   <h1>No More Lives Left!</h1>
+                  <p class="p-0 m-0">The hidden word is</p>
+                  <p class="text-uppercase no-lives-word p-0 m-0"></p>
                 </div>
                 <div class="img-next-wrapper d-flex justify-content-center align-items-center">
                   <img src="https://media1.tenor.com/m/9HFO_H3ktFsAAAAd/cardo-dalisay-crying.gif" height="300">
