--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     <div class="container-fluid">
+    
 
-      <div class="row ">
+      <div class="row intro-wrapper">
         <div class="col-12 text-center p-4">
           <img src="/assets/question-41.svg" height="300">
           <h1>GUESS IT!</h1>
@@ -22,11 +23,13 @@
         </div>
       </div>
 
-      <footer class="text-center fixed-bottom">
-        <p class="p-0 m-0">Created By: <strong>MILO</strong></p>
-        <p class="p-0 m-0">Copyright &copy; 2024</p>
-      </footer>
-    </div>
+     
+   
+    <footer class="text-center">
+      <p class="p-0 m-0">Created By: <strong>MILO</strong></p>
+      <p class="p-0 m-0">Copyright &copy; 2024</p>
+    </footer>
+  </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
