--- a/game.html
+++ b/game.html
@@ -52,7 +52,7 @@
             <div class="col-12 lives-wrapper">
             </div>
             <div class="col-12 guessed-word-wrapper">
-              <p>Word Guess : <span class="word-guess"></span></p>
+              <p>Word Guessed : <span class="word-guess"></span></p>
              </div>
             <div class="col-12 text-center p-2">
               <div>
